Handle colour slug in landscape mode - Fix color slug button overlapping issue in landscape mode - Align gallery arrow button to the screen edge

--- a/BikeWale.UI/sass/partials/_gallery-popup.sass
+++ b/BikeWale.UI/sass/partials/_gallery-popup.sass
@@ -146,10 +146,6 @@
 .gallery-image__feature
 	overflow: hidden
 
-	a,
-	span
-		padding: 20px
-
 	.landscape-icon__container
 		@include vendor-prefix('transition', width 1s)
 		width: 0
@@ -160,29 +156,32 @@
 // footer icons
 .gallery__download-icon
 	@include download-2d2d2d-icon
-	display: inline-block
-	vertical-align: middle
-	height: 18px
-	width: 20px
+	background-position: 11px 11px
 	background-size: 18px
+	display: inline-block
+	vertical-align: middle	
+	width: 40px
+	height: 40px
 	cursor: pointer
 
 .gallery__share-icon
 	@include share-2d2d2d-icon
+	background-position: 11px 11px
+	background-size: 17px
 	display: inline-block
 	vertical-align: middle
-	height: 18px
-	width: 14px
-	background-size: 17px
+	width: 40px
+	height: 40px
 	cursor: pointer
 
 .gallery__zoom-icon
 	@include fullscreen-2d2d2d-icon
+	background-position: 11px 11px
+	background-size: 17px
 	display: inline-block
 	vertical-align: middle
-	height: 16px
-	width: 16px
-	background-size: 17px
+	width: 40px
+	height: 40px
 	cursor: pointer
 
 .screen--rotate
@@ -190,12 +189,13 @@
 
 .gallery__landscape-icon
 	@include rotate-2d2d2d-icon
+	background-position: 10px 10px
+	background-size: 20px
 	display: inline-block
 	vertical-align: middle
 	height: 40px
 	width: 40px
 	text-align: right
-	background-size: 20px
 	cursor: pointer
 
 .landscape-icon__container
@@ -381,10 +381,12 @@
 
 		.gallery__share-icon
 			@include share-fff-icon
+			background-position: 11px 11px
 			background-size: 17px
 
 		.gallery__download-icon
 			@include download-fff-icon
+			background-position: 11px 11px
 			background-size: 18px
 		
 		.model-gallery__image-title
@@ -420,13 +422,17 @@
 
 .device--landscape-no-fullscreen
 	.orientation--landscape
-		.gallery-popup--active
-			.model-gallery
-				.swiper-slide
-					height: 90vh
+		.gallery-slide-slug__title
+			margin-bottom: 15px
 
-					img
-						max-height: 90%
+		.color-slide__list
+			margin-bottom: 15px
+
+		.color-slide__more-count
+			margin-bottom: 10px
+
+		.model-gallery__color-slide
+			padding-bottom: 50px
 
 // color slug
 .gallery-color-slug--active
@@ -534,17 +540,13 @@
 
 	.slide__more-btn-content
 		position: relative
+		bottom: 0
 
 	.color-box
 		width: 48px
 		height: 48px
 
-.browser--uc
-	.orientation--landscape
-		.color-slide__list
-			margin-bottom: 5px
-
-.browser--uc-v10
+.browser--uc-fallback
 	.orientation--landscape
 		.gallery-image__left-section
 			min-width: 220px
@@ -593,6 +595,7 @@
 	max-width: 85%
 	font-size: 14px
 	color: #fff
+	margin-bottom: 10px
 	text-align: center
 
 .gallery-video-slug--active
